SVG error parsing empty path https://bugs.webkit.org/show_bug.cgi?id=78980

Reviewed by Darin Adler.

Source/WebCore:

According to the spec (http://www.w3.org/TR/SVG/paths.html#PathData), path 'd' attribute can be empty.
No error should be reported in this case.

* svg/SVGPathParser.cpp:
(WebCore::SVGPathParser::parsePathDataFromSource):
* svg/SVGPathUtilities.cpp:
(WebCore::buildPathFromString):
(WebCore::buildSVGPathByteStreamFromSVGPathSegList):
(WebCore::buildPathFromByteStream):
(WebCore::buildSVGPathSegListFromByteStream):
(WebCore::buildStringFromByteStream):
(WebCore::buildStringFromSVGPathSegList):
(WebCore::buildSVGPathByteStreamFromString):
(WebCore::buildAnimatedSVGPathByteStream):
(WebCore::addToSVGPathByteStream):

LayoutTests:

Adapt fuzz-path-parser.html and dynamic-empty-path.svg to also test empty paths.
Adjust expectations to not expect an error message for empty paths.

* platform/gtk/svg/W3C-SVG-1.1-SE/paths-dom-02-f-expected.txt:
* platform/gtk/svg/custom/dynamic-empty-path-expected.txt:
* platform/mac/svg/W3C-SVG-1.1-SE/paths-dom-02-f-expected.txt:
* platform/qt/svg/W3C-SVG-1.1-SE/paths-dom-02-f-expected.txt:
* platform/qt/svg/custom/dynamic-empty-path-expected.txt:
* svg/W3C-SVG-1.1-SE/paths-dom-02-f-expected.txt:
* svg/custom/dynamic-empty-path-expected.txt:
* svg/dom/fuzz-path-parser-expected.txt:
* svg/dom/fuzz-path-parser.html: also test empty path
* svg/dom/path-parser-expected.txt:
* svg/dom/script-tests/path-parser.js: also test empty path


Canonical link: https://commits.webkit.org/138524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154896 268f45cc-cd09-0410-ab3c-d52691b4dbfc